2.1.3 - 2026-02-xx
==================

# Broker:
- Fix MOSQ_EVT_DISCONNECT being called before MOSQ_EVT_ACL_CHECK for the will
  of that client. Closes #3487.

# Common lib:
- Fix potential crash if reading a file in restricted mode and the group id
  does not have an entry in /etc/groups. Closes #3498.

# Plugins
- Fix migrate_to_persist_sqlite.py not base64 decoding message payloads when
  migrating. Closes #3492.

# Build:
- Fix test building with WITH_EDITLINE=no. Closes #3484.


2.1.2 - 2026-02-09
==================

Broker:
- Forbid running with `persistence true` and with a persistence plugin at the
  same time.

Build:
- Build fixes for OpenBSD. Closes #3474.
- Add missing libedit to docker builds. Closes #3476.
- Fix static/shared linking of libwebsockets under cmake.


2.1.1 - 2026-02-04
==================

# Broker

- Fix PUID/PGID checking for docker
- Add MOSQUITTO_UNSAFE_ALLOW_SYMLINKS environment variable to allow the
  restrictions on reading files through symlinks to be lifted in safe
  environments like kubernetes. Closes #3461.
- Fix inconsistent disconnect log message format, and add address:port.
- Fix `plugin`/`global_plugin` option not allowing space characters.
- Fix $SYS load values not being published initially. Closes #3459.
- Fix max_connections not being honoured on libwebsockets listeners. This does
  not affect the built-in websockets support. Closes #3455.
- Don't enforce receive-maximum, just log a warning. This allows badly
  behaving clients to be fixed. Closes #3471.

# Plugins
- Fix incorrect linking of libmosquitto_common.so for the acl and password
  file plugins. Closes #3460.

# Build
- Fix building with WITH_TLS=no


2.1.0 - 2026-01-29
==================

# Broker

## Deprecations
- The acl_file option is deprecated in favour of the acl-file plugin, which is
  the same code but moved into a plugin. The acl_file option will be removed
  in 3.0.
- The password_file option is deprecated in favour of the password-file plugin,