@@ -48,7 +48,6 @@ int mosquitto_loop_start(struct mosquitto *mosq)
 		return MOSQ_ERR_INVAL;
 	}
 
-	mosq->threaded = mosq_ts_self;
 	if(!COMPAT_pthread_create(&mosq->thread_id, NULL, mosquitto__thread_main, mosq)){
 #if defined(__linux__)
 		pthread_setname_np(mosq->thread_id, "mosquitto loop");
@@ -57,6 +56,7 @@ int mosquitto_loop_start(struct mosquitto *mosq)
 #elif defined(__FreeBSD__) || defined(__OpenBSD__)
 		pthread_set_name_np(mosq->thread_id, "mosquitto loop");
 #endif
+		mosq->threaded = mosq_ts_self;
 		return MOSQ_ERR_SUCCESS;
 	}else{
 		return MOSQ_ERR_ERRNO;
