@@ -37,14 +37,12 @@ endif()
 
 target_include_directories(libmosquitto_common
 	PUBLIC
-		"${mosquitto_SOURCE_DIR}/"
-		"${mosquitto_SOURCE_DIR}/include"
 		"${CJSON_INCLUDE_DIRS}"
 )
 
 target_link_libraries(libmosquitto_common
 	PUBLIC
-		config-header
+		common-options
 		cJSON
 )
 
