@@ -1,0 +1,98 @@
+/* Linker version script - currently used here primarily to control which
+ * symbols are exported.
+ */
+
+MOSQ_2.1 {
+	global:
+		libcommon_printf;
+		mosquitto_base64_decode;
+		mosquitto_base64_encode;
+		mosquitto_calloc;
+		mosquitto_connack_string;
+		mosquitto_fgets;
+		mosquitto_fopen;
+		mosquitto_free;
+		mosquitto_free;
+		mosquitto_getrandom;
+		mosquitto_malloc;
+		mosquitto_malloc;
+		mosquitto_max_memory_used;
+		mosquitto_memory_set_limit;
+		mosquitto_memory_used;
+		mosquitto_properties_to_json;
+		mosquitto_property_next;
+		mosquitto_property_read_binary;
+		mosquitto_property_read_byte;
+		mosquitto_property_read_int16;
+		mosquitto_property_read_int32;
+		mosquitto_property_read_string;
+		mosquitto_property_read_string_pair;
+		mosquitto_property_read_varint;
+		mosquitto_property_add_binary;
+		mosquitto_property_add_byte;
+		mosquitto_property_add_int16;
+		mosquitto_property_add_int32;
+		mosquitto_property_add_string;
+		mosquitto_property_add_string_pair;
+		mosquitto_property_add_varint;
+		mosquitto_property_binary_value;
+		mosquitto_property_binary_value_length;
+		mosquitto_property_byte_value;
+		mosquitto_property_check_all;
+		mosquitto_property_check_command;
+		mosquitto_property_copy_all;
+		mosquitto_property_free;
+		mosquitto_property_free_all;
+		mosquitto_property_get_length;
+		mosquitto_property_get_length_all;
+		mosquitto_property_get_remaining_length;
+		mosquitto_property_identifier;
+		mosquitto_property_identifier_to_string;
+		mosquitto_property_int16_value;
+		mosquitto_property_int32_value;
+		mosquitto_property_remove;
+		mosquitto_property_string_name;
+		mosquitto_property_string_name_length;
+		mosquitto_property_string_value;
+		mosquitto_property_string_value_length;
+		mosquitto_property_type;
+		mosquitto_property_varint_value;
+		mosquitto_pub_topic_check;
+		mosquitto_pub_topic_check2;
+		mosquitto_pw_cleanup;
+		mosquitto_pw_decode;
+		mosquitto_pw_get_encoded;
+		mosquitto_pw_hash_encoded;
+		mosquitto_pw_is_valid;
+		mosquitto_pw_new;
+		mosquitto_pw_set_param;
+		mosquitto_pw_set_valid;
+		mosquitto_pw_verify;
+		mosquitto_read_file;
+		mosquitto_realloc;
+		mosquitto_realloc;
+		mosquitto_reason_string;
+		mosquitto_strdup;
+		mosquitto_strerror;
+		mosquitto_string_to_command;
+		mosquitto_string_to_property_info;
+		mosquitto_strndup;
+		mosquitto_sub_matches_acl;
+		mosquitto_sub_matches_acl_with_pattern;
+		mosquitto_sub_topic_check;
+		mosquitto_sub_topic_check2;
+		mosquitto_sub_topic_tokenise;
+		mosquitto_sub_topic_tokens_free;
+		mosquitto_time;
+		mosquitto_time_cmp;
+		mosquitto_time_init;
+		mosquitto_time_ns;
+		mosquitto_topic_matches_sub;
+		mosquitto_topic_matches_sub2;
+		mosquitto_topic_matches_sub_with_pattern;
+		mosquitto_trimblanks;
+		mosquitto_validate_utf8;
+		mosquitto_varint_bytes;
+		mosquitto_write_file;
+	local: *;
+};
