@@ -22,4 +22,4 @@ target_include_directories(libmosquitto_common_mock
         ${mosquitto_SOURCE_DIR}/test/mock
         ${mosquitto_SOURCE_DIR}/test/mock/lib
 )
-target_link_libraries(libmosquitto_common_mock PRIVATE GTest::gmock)
+target_link_libraries(libmosquitto_common_mock PRIVATE cJSON GTest::gmock)
