@@ -13,7 +13,7 @@ target_include_directories(common-unit-test-header
 target_link_libraries(common-unit-test-header
     INTERFACE
         common-options
-        config-header
+        cJSON
         CUnit::CUnit
 )
 
