@@ -1,13 +1,20 @@
 2.1.3 - 2026-02-xx
 ==================
 
-# Broker:
+# Broker
 - Fix MOSQ_EVT_DISCONNECT being called before MOSQ_EVT_ACL_CHECK for the will
   of that client. Closes #3487.
+- Fix password length not being passed to MOSQ_EVT_BASIC_AUTH events.
+  Closes #3490.
 
 # Common lib:
 - Fix potential crash if reading a file in restricted mode and the group id
   does not have an entry in /etc/groups. Closes #3498.
+- Fix missing SONAME. Closes #3483.
+
+# Lib
+- Fix mosquitto_loop_start() leaving the mosq struct in an invalid state if
+  thread creation fails. Closes #3496.
 
 # Plugins
 - Fix migrate_to_persist_sqlite.py not base64 decoding message payloads when
@@ -15,16 +22,17 @@
 
 # Build:
 - Fix test building with WITH_EDITLINE=no. Closes #3484.
+- Fix libmosquitto_static cmake build.
 
 
 2.1.2 - 2026-02-09
 ==================
 
-Broker:
+# Broker
 - Forbid running with `persistence true` and with a persistence plugin at the
   same time.
 
-Build:
+# Build
 - Build fixes for OpenBSD. Closes #3474.
 - Add missing libedit to docker builds. Closes #3476.
 - Fix static/shared linking of libwebsockets under cmake.
